# dev-bootstrap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap.sh  pyproject.toml
docs/superpowers/plans/: 2026-03-12-devstrap-cli.md
docs/superpowers/specs/: 2026-03-12-devstrap-cli-design.md
src/devstrap/: cli.py  installer.py  models.py  platform.py  tools.yaml
tests/: test_cli.py  test_installer.py  test_models.py  test_platform.py
